--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,16 @@
-MONGODB_URI = 'mongodb+srv://ayushranjan9531:9135763481@cluster-1.ecjehfa.mongodb.net/jobPortal'
+JWT_SECRET ="dev#secret"
 
-CLERK_WEBHOOK_SECRET=""
+#mongoDb setup
+
+MONGODB_URI=mongodb+srv://ayushranjan9531:9135763481@cluster-1.ecjehfa.mongodb.net
+
+
+#cloudinary setup
+CLOUDINARY_NAME = daegkma7s
+CLOUDINARY_API_KEY = 793514318115327
+CLOUDINARY_SECRET_KEY = _Wtgj4hq0FJlD-vOybIt1UOJvXc
+
+#clerk setup
+CLERK_WEBHOOK_SECRET="whsec_Eb7F2Ud6x1xEwOP7sEc+lZZvX7wLe9tB"
+CLERK_PUBLISHABLE_KEY=pk_test_YWJsZS1zZWFzbmFpbC05My5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_OieIpnvhJnwJpSpoBMaBzmUwCcZ8ZRPlT1VBqXFaFr
