manage-visibility-commit

--- a/server/.env
+++ b/server/.env
@@ -1,16 +1,16 @@
-JWT_SECRET ="dev#secret"
+JWT_SECRET ="0f96add444e16b5e0371a0c9c276304e"
 
 #mongoDb setup
 
-MONGODB_URI=mongodb+srv://ayushranjan9531:9135763481@cluster-1.ecjehfa.mongodb.net
+MONGODB_URI=mongodb+srv://ayushranjan9531:7631529531@cluster-1.ecjehfa.mongodb.net
 
 
 #cloudinary setup
 CLOUDINARY_NAME = daegkma7s
-CLOUDINARY_API_KEY = 793514318115327
-CLOUDINARY_SECRET_KEY = _Wtgj4hq0FJlD-vOybIt1UOJvXc
+CLOUDINARY_API_KEY = 854693977418974
+CLOUDINARY_SECRET_KEY =PoEk1KX9F0QD6pT2vs2vKhgzSGw
 
 #clerk setup
-CLERK_WEBHOOK_SECRET="whsec_Eb7F2Ud6x1xEwOP7sEc+lZZvX7wLe9tB"
+CLERK_WEBHOOK_SECRET="whsec_ejNzt5A3YH0wv35yaKKj9NXcj42va7J/"
 CLERK_PUBLISHABLE_KEY=pk_test_YWJsZS1zZWFzbmFpbC05My5jbGVyay5hY2NvdW50cy5kZXYk
-CLERK_SECRET_KEY=sk_test_OieIpnvhJnwJpSpoBMaBzmUwCcZ8ZRPlT1VBqXFaFr
+CLERK_SECRET_KEY=sk_test_ZJr4d8w920O7XKsCsGjRanBJZe1U0KVnnJ7C6xwhMk
