--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
 node_modules
+.env
+# node modules
+node_modules/
+
+# build output
+dist/
+build/
+
+# environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE configs
+.vscode/
+.idea/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# logs
+*.log
+
+# testing
+coverage/
